# ai-desktop-pet

./: .gitignore  AGENTS.md  ANALYSIS_FEED_BUTTON.md  ANALYSIS_PET_STATUS_DYNAMIC.md  CLAUDE.md  DIAGNOSE.md  FAKE_INTERACTIONS_REPORT.md  FEED_BUTTON_FIX.md  FINAL_STATUS.md  FIXES_SUMMARY.md  FIX_LIVE2D.md  GEMINI.md  HOW_TO_DEBUG.md  IMPLEMENTATION_SUMMARY.md  LIVE2D_FIX_GUIDE.md  PROBLEM_ANALYSIS.md  PROJECT_SUMMARY.md  QUICK_TEST.md  README.md  WARP.md  bookmark-search-test.html  chat.html  debug-paths.html  diagnose-live2d.html  index.html  package.json  pnpm-lock.yaml  proactive-care-test.html  settings.html  tailwind.config.js  test-icons.html  test-live2d-paths.html  test-suggestions-persistence.html  test.html  tsconfig.json  vite.config.ts  查看日志步骤.md  项目说明.md
docs/: AGENT-SYSTEM-SUMMARY.md  ARCH-智能体系统任务拆分.md  CHANGELOG-ACHIEVEMENT-ICONS.md  FIX-ICON-DISPLAY.md  FIX-SUMMARY.md  INTEGRATION-智能体系统集成指南.md  KNOWN_LIMITATIONS.md  MIGRATION-ACHIEVEMENTS-ICONS.md  MIGRATION-REPORT-20251231-172504.txt  P1-suggestions-persistence-implementation.md  PERFORMANCE_OPTIMIZATION.md  PRD-宠物养成系统.md  PRD-智能体系统规划.md  SETTINGS_REFACTOR_PLAN.md  SPRINT4_COMPLETION_REPORT.md  TEST_CHECKLIST.md  TEST_REPORT.md  bookmark-troubleshooting.md  chrome-bookmarks-architecture.md  chrome-bookmarks-integration.md  chrome-bookmarks-quick-reference.md  chrome-bookmarks-tasks.md  clickable-suggestions-implementation.md  enable-live2d-console.md  live2d-api-analysis.md  live2d-setup-guide.md  scheduler-README.md  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  scheduler.rs
(+434 files in other folders)
